# Hyperion

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md
docker/: Dockerfile.java  Dockerfile.python  docker-compose.yml
docs/: mkdocs.yml
java/: settings.gradle
proto/: hyperion.proto
python/: pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
python/benchmarks/: bench_inference.py
python/examples/: demo_models.py
python/hyperion_api/: __init__.py  server.py
python/hyperion_backends/: __init__.py  base.py  jax_backend.py
python/hyperion_diagnostics/: __init__.py  metrics.py  ppc.py  report.py
python/hyperion_dsl/: __init__.py  constraints.py  distributions.py  model.py  primitives.py  transforms.py
python/hyperion_exp/: __init__.py  runner.py  serialization.py
python/hyperion_graph/: __init__.py  graph_builder.py
python/hyperion_inference/: __init__.py  base.py  flows.py  hmc.py  laplace.py  mcmc.py  nuts.py  predictive.py  smc.py  vi.py  warmup.py
python/hyperion_ir/: __init__.py  compiler.py  ir.py  optimizer.py
python/hyperion_trace/: __init__.py  handler.py  handlers.py  trace.py
python/tests/: __init__.py  conftest.py
python/tests/test_bijectors/: __init__.py  test_transforms.py  test_transforms_extended.py
python/tests/test_diagnostics/: __init__.py  test_metrics.py
python/tests/test_distributions/: __init__.py  test_basic_distributions.py  test_edge_cases.py
python/tests/test_inference/: __init__.py  test_components.py  test_posterior_recovery.py
python/tests/test_integration/: __init__.py  test_comprehensive.py  test_end_to_end.py  test_mcmc_multichain.py
python/tests/test_trace/: __init__.py  test_tracing.py
scripts/: run_demo.py
(+16 files in other folders)
