[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperion-ppl"
version = "0.1.0"
description = "Compiler-backed Probabilistic Programming Language for scientific models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "optax>=0.1.7",
    "networkx>=3.1",
    "pydantic>=2.5",
    "arviz>=0.17",
    "matplotlib>=3.8",
    "xarray>=2023.10",
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=4.25",
    "hydra-core>=1.3",
    "zarr>=2.16",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.90",
    "ruff>=0.1.8",
    "mypy>=1.7",
    "black>=23.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hyperion_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "jax.*",
    "jaxlib.*",
    "optax.*",
    "scipy.*",
    "arviz.*",
    "matplotlib.*",
    "networkx.*",
    "hydra.*",
    "zarr.*",
    "pyarrow.*",
    "grpc.*",
    "grpcio.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
